<resources>
    <string name="app_name">Admin Panel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Dashboard</string>
    <string name="menu_district">District</string>
    <string name="menu_municipality">Municipality</string>

    <string name="home_second">Home Second</string>
    <string name="remember_me">Remember Me</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="log_in"><u>Log In</u></string>
    <string name="post_reports">Offer Reports</string>
    <string name="user_reports">User Reports</string>
    <string name="verify_posts">Verify Posts</string>
    <string name="verify_user">Verify User</string>
    <string name="communication">Communication</string>
    <string name="log_out">Log Out</string>
    <string name="message_type">Notification Type</string>
    <string name="write_message">Notification Description</string>
    <string name="broadcast_notification">Broadcast Notification</string>
    <string name="loading">Loading…</string>
    <string name="district_name">District Name</string>
    <string name="add_district">Add District</string>
    <string name="add_image">Add image!</string>
    <string name="view_municipalities">View Municipalities</string>
    <string name="add_municipality">Add Municipality</string>
    <string name="verify_profile">Verify Profile</string>
    <string name="contacts">Contacts</string>
    <string name="emails">Emails</string>
    <string name="professions">Professions</string>
    <string name="problem_reports">Problem Report</string>
    <string name="post_image">Post Image</string>
    <string name="view_reports">View Reports</string>
    <string name="remove_post">Remove Post</string>
</resources>
