<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ActivityCollection.AddDistrict.AddDistrict">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.google.android.material.appbar.AppBarLayout>

    <com.example.adminpanel.BounceScrollViewPackage.BounceScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/districtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/district_name"
                    android:inputType="text"
                    tools:ignore="Autofill" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/addImage"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_background"
                android:src="@drawable/addimg"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/errorMsg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:drawableStart="@drawable/ic_report_black_24dp"
                android:drawableLeft="@drawable/ic_report_black_24dp"
                android:drawablePadding="10dp"
                android:drawableTint="@android:color/holo_red_dark"
                android:gravity="center"
                android:text="@string/add_image"
                android:textColor="@android:color/holo_red_dark"
                android:visibility="gone"
                tools:ignore="UnusedAttribute" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/addDistrict"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/login_button"
                    android:text="@string/add_district" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>
    </com.example.adminpanel.BounceScrollViewPackage.BounceScrollView>
</LinearLayout>