<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/login_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/login_image_background"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <com.example.adminpanel.BounceScrollViewPackage.BounceScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="always">

        <RelativeLayout
            android:id="@+id/login_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="-50dp"
                android:background="@drawable/login_content_background"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp"
                android:paddingBottom="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/log_in"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/uname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp">

                    <EditText
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@drawable/ic_person_outline_black_24dp"
                        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                        android:drawablePadding="5dp"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:padding="10dp"
                        android:text="prachanghale"
                        android:translationY="8dp"
                        tools:ignore="Autofill,HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/uname"
                    android:layout_marginTop="15dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:background="@drawable/edittext_background"
                        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
                        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                        android:drawablePadding="5dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:text="barpak1234"
                        android:translationY="8dp"
                        tools:ignore="Autofill,HardcodedText" />
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:id="@+id/rememberMe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/pword"
                    android:layout_marginTop="10dp"
                    android:text="@string/remember_me" />

                <TextView
                    android:id="@+id/errorMsg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/rememberMe"
                    android:text="UserName Or Password Don't match"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="17sp"
                    android:visibility="gone"
                    tools:ignore="HardcodedText" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/errorMsg"
                    android:layout_marginTop="20dp">


                    <Button
                        android:id="@+id/logIn"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/login_button"
                        android:padding="1dp"
                        android:text="Log in"
                        android:textColor="@color/black"
                        tools:ignore="HardcodedText" />

                    <ProgressBar
                        android:id="@+id/progress_circular"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone" />
                </RelativeLayout>
            </RelativeLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:padding="2dp"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </com.example.adminpanel.BounceScrollViewPackage.BounceScrollView>
</RelativeLayout>