<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/postedByImage"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:src="@drawable/profile" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_toEndOf="@+id/postedByImage"
                android:layout_toRightOf="@+id/postedByImage"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/postedByName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Prachan Ghale"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/postedDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="posted date"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />

                <TextView
                    android:id="@+id/postValidDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:text="Valid date"
                    android:textColor="@color/black"
                    tools:ignore="HardcodedText" />
            </LinearLayout>
        </RelativeLayout>

        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/expand_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="10dp"
            app:animDuration="200"
            app:maxCollapsedLines="3">

            <TextView
                android:id="@id/expandable_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|bottom"
                android:background="@android:color/transparent"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="0dp"
                tools:ignore="ContentDescription,RtlHardcoded" />
        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <ImageView
            android:id="@+id/postImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/post_image" />

        <Button
            android:id="@+id/viewReports"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_button"
            android:text="@string/view_reports"
            android:textColor="@color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp">

            <ProgressBar
                android:id="@+id/deleteLoading"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/removePost"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/remove_button"
                android:text="@string/remove_post"
                android:textColor="@color/white"
                android:visibility="visible" />
        </RelativeLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>