<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:background="@drawable/login_gradient"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/login_image_background"
            tools:ignore="ContentDescription" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <com.example.adminpanel.BounceScrollViewPackage.BounceScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:overScrollMode="always">

        <RelativeLayout
            android:id="@+id/login_parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="20dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/logo"
                android:layout_marginTop="-50dp"
                android:background="@drawable/login_content_background"
                android:paddingLeft="10dp"
                android:paddingTop="30dp"
                android:paddingRight="10dp"
                android:paddingBottom="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/broadcast_notification"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp">

                        <EditText
                            android:id="@+id/messageType"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_merge_type_black_24dp"
                            android:drawableLeft="@drawable/ic_merge_type_black_24dp"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorPrimary"
                            android:hint="@string/message_type"
                            android:inputType="text"
                            tools:ignore="Autofill,TextFields,UnusedAttribute" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp">

                        <EditText
                            android:id="@+id/message"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:drawableStart="@drawable/ic_message_black_24dp"
                            android:drawableLeft="@drawable/ic_message_black_24dp"
                            android:drawablePadding="10dp"
                            android:drawableTint="@color/colorPrimary"
                            android:hint="@string/write_message"
                            tools:ignore="Autofill,TextFields,UnusedAttribute" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="30dp"
                        android:gravity="center"
                        android:orientation="vertical">

                        <Button
                            android:id="@+id/sendBtn"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/login_button"
                            android:text="Broadcast"
                            android:textColor="@color/white"
                            tools:ignore="HardcodedText" />

                        <ProgressBar
                            android:id="@+id/loading"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:visibility="gone" />
                    </LinearLayout>
                </LinearLayout>
            </RelativeLayout>

            <ImageView
                android:id="@+id/logo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:padding="2dp"
                tools:ignore="ContentDescription" />
        </RelativeLayout>
    </com.example.adminpanel.BounceScrollViewPackage.BounceScrollView>
</RelativeLayout>